tests/fixtures/invalid/int_bitor_list.py
# Cannot bitwise OR Int and List[int]
x: int = 1 | [1, 2, 3]
